[package]
name = "sabratha"
version = "0.0.1"
authors = ["Thomas J. Webb <thomas@osakared.com>"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
#tokio = { version = "0.2", features = ["macros", "sync"] }
#warp = "0.2"
#serde = {version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0.85" }
# chrono = "0.4.29"
#futures = { version = "0.3.24", default-features = false }
# uuid = { version = "1.1.2", features = ["serde", "v4"] }
