[package]
name = "sabratha"
version = "0.0.1"
authors = ["Thomas J. Webb <thomas@osakared.com>"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rerun = "0.23.3"
serde = "1.0.219"
serde_json = "1.0.140"
